# cpp_template

./: CMakeLists.txt  README.md  conanfile.py  new.ps1  project.ps1
cmake/: qt.cmake
include/: prelude.hpp
src/: main.cpp
